# statpp

./: .env  .envrc  .gitattributes  .gitignore  GEMINI.md  Justfile  README.md  all_mods.py  analysis.ipynb  claude_ver.py  common_queries.sql  copy.sh  db.py  docker-compose.yml  dump-no-data.sql  find_differentiating_maps.py  hello.py  id_tables.sql  imports.py  impressiveness.py  interpret_pmf_endo.py  investigate_distribution.py  investigate_mle.py  investigate_pmf.py  investigate_surprise_svd.py  investigate_svd.py  iter.py  iter_novelty.py  iter_novelty_analyze.py  iter_vec.py  iter_vec_all.py  iter_vec_analyze.py  main.py  mods.txt  osu_db.py  osu_shit.py  pmf_pp.py  pyproject.toml  sample.json  sample2.json  (+11 more)
data-extract/: scores-by-beatmap.tsv
schema/: osu.sql  statpp.sql
statpp-rs/: .tokeignore  Cargo.toml  DESIGN3.md
statpp-rs/src/: convert.rs  main.rs  skill.rs  train.rs
statpp-rs/src/entity/: beatmap.rs  beatmapmod.rs  beatmapmod_vector.rs  mod.rs  prelude.rs  score.rs  user.rs  user_vector.rs
training_data/: mappings_maps.json  mappings_maps.json.zst  mappings_users.json  mappings_users.json.zst  rankings.json  train_final.parquet
