[project]
name = "statpp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "connectorx>=0.4.4",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.0",
    "joblib>=1.5.1",
    "mysql-connector-python>=9.3.0",
    "numpy>=2.3.1",
    "ossapi>=5.3.3",
    "pandas>=2.3.0",
    "polars>=1.37.1",
    "pony>=0.7.19",
    "prefect>=3.4.7",
    "pyarrow>=22.0.0",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "reflex>=0.8.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "zstandard>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.12.1",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true