[package]
name = "statpp-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
burn = { version = "0.19.1", features = ["wgpu", "train"] }
clap = { version = "4.5.53", features = ["derive"] }
dotenvy = "0.15.7"
indicatif = "0.18.3"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-mysql", "runtime-tokio-rustls", "macros" ], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
sqlx = { version = "0.8.6", default-features = false, features = ["macros", "mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.48.0", features = ["full"] }
